infrastructure/configs/racknerd/cilium/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: https-gateway
  labels:
    lan-gateway: "true"
